Updated to version 4.16.4.Final
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@38062 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/XTS/sar/crash-recovery-tests/pom.xml
+++ b/XTS/sar/crash-recovery-tests/pom.xml
@@ -43,14 +43,14 @@
 		<dependency>
 			<groupId>org.jboss.jbossts</groupId>
 			<artifactId>jbossxts-api</artifactId>
-			<version>4.16.4.Final-SNAPSHOT</version>
+			<version>4.16.4.Final</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/../build/jbossxts-api.jar</systemPath>
 		</dependency>
                 <dependency>
                         <groupId>org.jboss.jbossts</groupId>
                         <artifactId>jbossjta</artifactId>
-                        <version>4.16.4.Final-SNAPSHOT</version>
+                        <version>4.16.4.Final</version>
                         <scope>system</scope>
 			<systemPath>${project.basedir}/../../../ArjunaJTS/build/install/lib/jbossjts.jar</systemPath>
                 </dependency>
