--- a/txframework/framework/pom.xml
+++ b/txframework/framework/pom.xml
@@ -14,9 +14,9 @@
     <description>txframework</description>
     <version>5.0.0.M2-SNAPSHOT</version>
     <properties>
-        <narayana.version>4.16.1.Final</narayana.version>
+        <narayana.version>5.0.0.M2-SNAPSHOT</narayana.version>
         <arquillian.version>1.0.0.Final</arquillian.version>
-        <jboss.version>7.1.1.Final</jboss.version>
+        <jboss.version>7.1.2.Final-SNAPSHOT</jboss.version>
     </properties>
 
     <build>
@@ -27,13 +27,6 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
-                <configuration>
-                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
@@ -149,11 +142,45 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.protocol</groupId>
+            <artifactId>arquillian-protocol-servlet</artifactId>
+            <version>${arquillian.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
         <profile>
-            <id>arq</id>
+            <!-- This profile will start a new JBoss AS instance, and execute
+     the test, shutting it down when done -->
+            <!-- Run with: mvn clean test -->
+            <id>arq-jbossas-managed</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${jboss.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>arq-remote</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
