--- a/qa/.gitignore
+++ b/qa/.gitignore
@@ -1,11 +1,4 @@
-TEST*
 dbdrivers
-testoutput
-transaction.log*
-CosServices.cfg
-ObjectStore
 dist
 idl-compiler.*
-value_1
-value_2
-PutObjectStoreDirHere
+build
