JBTM-738 updated to remove the log4j.properties from the jar

--- a/common/etc/log4j.properties
+++ b/common/etc/log4j.properties
@@ -18,29 +18,20 @@
 # (C) 2005-2006,
 # @author JBoss Inc.
 #
-# to select this as the log4j configuration for the client library, include the
-# following system property on startup. normally, the client application should configure
-# the log system though...
-# -Dlog4j.configuration=file://localhost/C:/.../log4j.properties
+# Default LOG4J Configuration
+# Arjuna Technologies Ltd.
+# $Id: log4j.properties 2342 2006-03-30 13:06:17Z  $
 
-log4j.rootLogger=DEBUG, stdout
-
-# use this line to add a file-based logger
-#log4j.rootLogger=DEBUG, stdout, R
+log4j.category.com.arjuna=INFO, default, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.stdout.Threshold=WARN
 
-# Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) %l - %m%n
-
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=ams.client.log
-
-log4j.appender.R.MaxFileSize=100KB
-# Keep one backup file
-log4j.appender.R.MaxBackupIndex=1
-
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%-r4 %p %t %c - %m%n
-
+log4j.appender.default=org.apache.log4j.RollingFileAppender
+log4j.appender.default.File=transaction.log
+log4j.appender.default.MaxFileSize=500KB
+log4j.appender.default.MaxBackupIndex=2
+log4j.appender.default.layout=org.apache.log4j.PatternLayout
+log4j.appender.default.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
