--- a/ArjunaJTS/narayana-jts/pom.xml
+++ b/ArjunaJTS/narayana-jts/pom.xml
@@ -56,6 +56,10 @@
         <configuration>
           <archive>
             <manifestEntries>
+              <Specification-Title>JTA/JTS</Specification-Title>
+              <Specification-Version>1.1/1.0</Specification-Version>
+              <Specification-Vendor>Oracle</Specification-Vendor>
+              <Implementation-Version>${project.version} (revision: ${buildNumber})</Implementation-Version>
               <arjuna-scm-revision>${buildScmBranch} (revision: ${buildNumber})</arjuna-scm-revision>
               <arjuna-properties-file>jbossts-properties.xml</arjuna-properties-file>
               <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
