--- a/XTS/jbossxts/pom.xml
+++ b/XTS/jbossxts/pom.xml
@@ -56,6 +56,10 @@
         <configuration>
           <archive>
             <manifestEntries>
+              <Specification-Title>WS-T/WS-C/WSAS/WSCF/WSTX</Specification-Title>
+              <Specification-Version>1.1</Specification-Version>
+              <Specification-Vendor>Oasis</Specification-Vendor>
+              <Implementation-Version>${project.version} (revision: ${buildNumber})</Implementation-Version>
               <arjuna-scm-revision>${buildScmBranch} (revision: ${buildNumber})</arjuna-scm-revision>
               <arjuna-properties-file>jbossts-properties.xml</arjuna-properties-file>
               <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
