JBTM-1158 increase the stack size

--- a/ArjunaJTS/jtax/pom.xml
+++ b/ArjunaJTS/jtax/pom.xml
@@ -51,7 +51,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Xms800m -Xmx800m</argLine>
+          <argLine>-Xss2048k</argLine>
           <systemProperties combine.children="append"/>
           <excludes>
             <exclude>**/common/**</exclude>
