--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -87,26 +87,6 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                    <!-- Prevent test and server output appearing in console. -->
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <enableAssertions>true</enableAssertions>
-                    <!-- Tests to execute. -->
-                    <includes>
-                        <include>**/*Tests.java</include>
-                    </includes>
-                    <!-- System properties passed to test cases -->
-                    <systemPropertyVariables>
-                        <!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-                        <server.jvm.args>${general.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
-                        <java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
         </plugins>
         <pluginManagement>
         	<plugins>
@@ -233,4 +213,58 @@
         </dependency>
 
     </dependencies>
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>arq</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<!-- Prevent test and server output appearing in console. -->
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
+							<enableAssertions>true</enableAssertions>
+							<!-- Tests to execute. -->
+							<includes>
+								<include>**/*Tests.java</include>
+							</includes>
+							<!-- System properties passed to test cases -->
+							<systemPropertyVariables>
+								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
+								<server.jvm.args>${general.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
+								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>${jboss-as.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
