JBTM-1141 update to add txbridge test commands in narayana.sh

--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -261,7 +261,7 @@
 				<dependency>
 					<groupId>org.jboss.as</groupId>
 					<artifactId>jboss-as-arquillian-container-managed</artifactId>
-					<version>${jboss-as.version}</version>
+					<version>${version.jbossas}</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
