provide the JDK5 and JDK7 byteman jars
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_6_1_GA_CP@38077 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaCore/arjuna/build.xml
+++ b/ArjunaCore/arjuna/build.xml
@@ -477,7 +477,7 @@
                 </fileset>
             </batchtest>
 
-            <jvmarg value="-javaagent:../../ext/byteman.jar=script:tests/byteman-scripts/reaper.txt"/>
+            <jvmarg value="-javaagent:../../ext/byteman-122.jar=script:tests/byteman-scripts/reaper.txt"/>
             <jvmarg value="-Dorg.jboss.byteman.debug"/>
         </junit>
     </target>
