Added back a version of byteman that works with JDK5
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_6_1_GA_CP@38079 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaCore/arjuna/build.xml
+++ b/ArjunaCore/arjuna/build.xml
@@ -459,7 +459,7 @@
         	</batchtest>
         </junit>
 
-        <condition property="bytemanversion" value="201" else="201">
+        <condition property="bytemanversion" value="201" else="103CP02">
             <not>
                  <contains string="${java.version}" substring="1.5" casesensitive="false" />
             </not>
