[JBTM-1161] Move rest-at support classes into their own maven artifact

--- a/rest-tx/pom.xml
+++ b/rest-tx/pom.xml
@@ -44,6 +44,7 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   </build>
 
   <modules>
+    <module>util</module>
     <module>tx</module>
     <module>webservice</module>
   </modules>
