change AS7 dependency version to 7.1.1.Final, JBTM-1165
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@38088 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/XTS/sar/crash-recovery-tests/pom.xml
+++ b/XTS/sar/crash-recovery-tests/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>jar</packaging>
 	<name>xts crash recovery tests</name>
 	<description>xts crash recovery tests</description>
-	<version>5.0.0.M2-SNAPSHOT</version>
+	<version>4.16.5.Final-SNAPSHOT</version>
 	<!--
 	<repositories>
 		<repository>
@@ -93,13 +93,13 @@
 				 <dependency>
 					 <groupId>org.jboss.as</groupId>
 					 <artifactId>jboss-as-arquillian-container-managed</artifactId>
-					 <version>7.1.2.Final-SNAPSHOT</version>
+					 <version>7.1.1.Final</version>
 					 <scope>test</scope>
 				 </dependency>
 				  <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-controller-client</artifactId>
-                    <version>7.1.2.Final-SNAPSHOT</version>
+                    <version>7.1.1.Final</version>
                     <scope>test</scope>
                 </dependency>
 			 </dependencies>
