fixing a bug in maven executable command, JBTM-1170
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@38098 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/txbridge/tests/build.xml
+++ b/txbridge/tests/build.xml
@@ -86,7 +86,7 @@
             <if>
                 <os family="windows" />
                 <then>
-                    <exec executable="mvn" dir="${basedir}" failonerror="true">
+                    <exec executable="cmd" dir="${basedir}" failonerror="true">
                         <arg value="/c" />
                         <arg value="mvn.bat" />
                         <mvn.args />
