JBTM-943 update to convert sc007 interop tests to use arquillian

--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -128,5 +128,6 @@
 		<module>WS-C</module>
 		<module>WS-T</module>
 		<module>WSTX11-interop</module>
+		<module>WSTFSC07-interop</module>
 	</modules>
 </project>
