--- a/XTS/localjunit/WSTFSC07-interop/pom.xml
+++ b/XTS/localjunit/WSTFSC07-interop/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>wstf-sc007-interop</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>wstf-sc007-interop</name>
 	<description>JBoss Transactions WS-Addressing interop test</description>
 	<dependencies>
