JBTM-1080 update to delete webapp directory

--- a/XTS/localjunit/WSTX11-interop/pom.xml
+++ b/XTS/localjunit/WSTX11-interop/pom.xml
@@ -12,27 +12,10 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>interop11</artifactId>
-	<packaging>war</packaging>
-	<name>interop11</name>
+	<artifactId>wstx11-interop</artifactId>
+	<packaging>jar</packaging>
+	<name>wstx11-interop</name>
 	<description>JBoss Transactions WS-Addressing interop test</description>
-	<build>
-		<finalName>${project.artifactId}</finalName>
-		<plugins>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1.1</version>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-					<archive>
-						<manifestEntries>
-					   		<Dependencies>org.jboss.jts,org.jboss.ws.api,javax.xml.ws.api,org.jboss.xts,org.dom4j,org.jboss.ws.jaxws-client services export,org.jboss.ws.cxf.jbossws-cxf-client services export</Dependencies>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 	<dependencies>
 		<dependency>
 			<groupId>dom4j</groupId>
