--- a/pom.xml
+++ b/pom.xml
@@ -1028,6 +1028,7 @@
         <module>txbridge</module>
         <module>fileio</module>
         <module>STM</module>
+        <module>txframework</module>
         <module>narayana-full</module>
       </modules>
     </profile>
